# foundation-app

./: .dockerignore  .env.example  .gitignore  .kdoignore  CLAUDE.md  DEPLOY.md  DESIGN.md  Dockerfile  Pitch.md  README.md  TODO.md  brand.md  docker-compose.yml  drizzle.config.ts  fly.toml  git.md  kdo.toml  next.config.ts  package-lock.json  package.json  tsconfig.json
contracts/: README.md  foundry.toml
contracts/src/: FdnSpcVault.sol
docs/: awy-multiply-engineering.md  kamino-deep-research.md  waitlist-v2.md
drizzle/: schema.ts
drizzle/migrations/: 0000_nostalgic_luminals.sql  0001_mute_rocket_raccoon.sql  0001_waitlist_profile.sql
drizzle/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
keepers/: README.md
keepers/batch-keeper/: package.json
keepers/batch-keeper/src/: index.ts
keepers/monitor/: package.json
keepers/monitor/src/: index.ts
keepers/nav-keeper/: package.json
keepers/nav-keeper/src/: index.ts
keepers/queue-keeper/: package.json
keepers/queue-keeper/src/: index.ts
programs/: Anchor.toml  Cargo.toml  README.md
programs/fdn_transfer_hook/: Cargo.toml
programs/fdn_transfer_hook/src/: lib.rs
programs/fdn_vault_compute/: Cargo.toml
programs/fdn_vault_compute/src/: access.rs  constants.rs  errors.rs  events.rs  instructions.rs  invariants.rs  lib.rs  math.rs  rate_limit.rs  state.rs  token.rs
programs/fdn_vault_compute/src/instructions/: claim_redeem.rs  deposit.rs  drain_managed.rs  harvest_fees.rs  initialize.rs  initialize_token_accounts.rs  mod.rs  pause.rs  process_withdrawals.rs  redeem.rs  request_redeem.rs  unpause.rs  update_nav.rs
public/.well-known/: security.txt
public/partners/: README.md
scripts/: cancel-stuck-solomon.ts  fix-deposit-schema.ts  fix-rent-collector.ts  fund-awy-vault.ts  grid-accounts-migration.sql  notifications-migration.sql  reclaim-rent.ts  refund-oro.ts  setup-mainnet.ts  setup-vault.ts  setup-vaults.ts  supabase-migration.sql  test-deployment.ts
scripts/oro-grail/: 01-mint-api-key.ts  02-create-user.ts  03-buy.ts  04-sell.ts  05-redeem.ts  06-list.ts  _shared.ts
sdk/: README.md  package.json
sdk/src/: index.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/alpha/: page.tsx
src/app/alpha/join/: JoinClient.tsx  page.tsx
src/app/alpha/reveal/: InviteLinkAction.tsx  page.tsx
src/app/alpha/welcome/: InviteKeyCopy.tsx  WelcomeActions.tsx  page.tsx
src/app/amplify/: page.tsx
src/app/api/admin/awy-rebalance/: route.ts
src/app/api/admin/update-nav/: route.ts
src/app/api/auth/[...all]/: route.ts
src/app/api/auth/demo/: route.ts
src/app/api/cron/apy-watch/: route.ts
src/app/api/deposit/: route.ts
src/app/api/external-vaults/: route.ts
src/app/api/geo/: route.ts
src/app/api/notifications/: route.ts
src/app/api/strategies/: route.ts
src/app/api/subscribers/: route.ts
src/app/api/vaults/: route.ts
src/app/api/withdraw/: route.ts
src/app/awy/: page.tsx
src/app/compute/: page.tsx
src/app/invest/: page.tsx
src/app/portfolio/: page.tsx
src/app/protocol/drift/: page.tsx
src/app/protocol/kamino/: page.tsx
src/app/protocol/solomon/: page.tsx
src/app/rebalance/: page.tsx
src/app/risk/: page.tsx
src/app/security/: page.tsx
src/app/share/[handle]/: page.tsx
src/app/strategy/[id]/: page.tsx  strategy.module.css
src/app/subscribed/: page.tsx
src/app/transparency/: page.tsx
src/app/vault/[id]/: page.tsx
src/components/: DepositForm.tsx  ExternalVaultCard.tsx  FcyWaitlistModal.tsx  Footer.tsx  Icons.tsx  Navbar.tsx  NoiseBackground.tsx  NotificationBell.tsx  PositionCard.tsx  ProtocolStats.tsx  RebalanceFlow.tsx  ReferralCodeInput.tsx  RiskDashboard.tsx  SharePriceChart.tsx  SignInWithX.tsx  StandingDashboard.tsx  SubscribeForm.tsx  ThemeToggle.tsx  VaultCard.tsx  VaultDetail.tsx  VaultHistoryChart.tsx  WaitlistCounter.tsx  WaitlistProgress.tsx  WalletButton.tsx  WalletModal.tsx  WalletProvider.tsx  WithdrawForm.tsx  YieldCalculator.tsx
src/hooks/: useDeposit.ts  useDrift.ts  useExternalVaults.ts  useGeoGate.ts  useKamino.ts  useNavHistory.ts  useSolomon.ts  useStrategies.ts  useTxHistory.ts  useUserPosition.ts  useVaults.ts  useWithdraw.ts
src/lib/: amplify.ts  api-validation.ts  circuit-breaker.ts  constants.ts  deploy-capital.ts  env.ts  notifications.ts  referrals.ts  standing.ts  supabase-server.ts  supabase.ts  utils.ts  vaults.ts
src/lib/auth/: client.ts  server.ts
src/lib/db/: index.ts
src/lib/grid/: accounts.ts  client.ts
src/lib/integrations/: drift.ts  kamino-loop.ts  kamino.ts  oro.ts  solomon-idl.ts  solomon-tx.ts  solomon.ts  strategies.ts
src/lib/integrations/awy/: index.ts  kamino-borrow.ts  leverage.ts  maple.ts  ondo.ts  onyc.ts  prime.ts  solomon.ts
src/lib/integrations/compute/: index.ts
src/lib/integrations/grail/: auth.ts  client.ts  cosign.ts  index.ts  server.ts  types.ts
src/lib/integrations/idl/: solomon-stake.json
src/lib/solana/: rpc.ts  squads.ts  vault-authority.ts
src/lib/waitlist/: profile.ts
src/types/: index.ts
tests-integration/: README.md  package.json
tests-integration/scripts/: devnet-smoke.ts
(+20 files in other folders)
