[workspace]
members = [
    "fdn_vault_compute",
    "fdn_transfer_hook",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Foundation <eng@foundation.xyz>"]
license = "UNLICENSED"
repository = "https://github.com/foundation/foundation-app"

[workspace.dependencies]
anchor-lang        = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl         = { version = "0.31.1", features = ["token_2022", "token_2022_extensions"] }
spl-token-2022     = { version = "7", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.10"
pyth-solana-receiver-sdk   = "0.6"
solana-program     = "2.1"
bytemuck           = { version = "1.19", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
