[package]
name = "fdn_transfer_hook"
version.workspace = true
edition.workspace = true
description = "Token-2022 transfer hook enforcing the 24h anti-arb lockup (ADR-004)"

[lib]
crate-type = ["cdylib", "lib"]
name = "fdn_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = "0.9"
spl-discriminator = "0.4"
